WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259892
REGRESSION (iOS 16): Web content cannot capture Cmd+F keyboard events
https://bugs.webkit.org/show_bug.cgi?id=259892
Summary
REGRESSION (iOS 16): Web content cannot capture Cmd+F keyboard events
Aditya Keerthi
Reported
2023-08-07 12:33:24 PDT
rdar://113516225
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2023-08-07 13:12:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16450
EWS
Comment 2
2023-08-07 15:41:48 PDT
Committed
266663@main
(0ea6efe2a2ee): <
https://commits.webkit.org/266663@main
> Reviewed commits have been landed. Closing PR #16450 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug