Cherry-pick 0ea6efe2a2ee. rdar://problem/113516225

REGRESSION (iOS 16): Web content cannot capture Cmd+F keyboard events
    https://bugs.webkit.org/show_bug.cgi?id=259892
    rdar://113516225

    Reviewed by Richard Robinson.

    Following the addition of new keyboard shortcuts for find and replace in iOS
    16, UIKit stopped giving WebKit a chance to handle Cmd+F (and related shortcuts)
    prior to performing the system action.

    In order to fix the issue, a UIKit change is required. However, once the issue
    is fixed in UIKit, the find/replace actions will be dispatched to
    `WKContentView` (the input delegate), rather than to `WKWebView`. Currently,
    WebKit handles find/replace actions in `WKWebView`, in order to ensure support
    for `WKPDFView`.

    To prevent an issue following a UIKit fix, implement the find/replace actions on
    `WKContentView`, forwarding calls back to `WKWebView` to perform the actual logic.

    No new tests at this time, as there is no behavior change from this patch alone,
    and a UIKit change is required to get the keyboard event working end-to-end.

    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView find:]):
    (-[WKContentView findAndReplace:]):
    (-[WKContentView findNext:]):
    (-[WKContentView findPrevious:]):

    Canonical link: https://commits.webkit.org/266663@main

Canonical link: https://commits.webkit.org/265870.343@safari-7616-branch